--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body{
   overflow-x: hidden;
   overflow-y: hidden;
   align-items: center;
-  background-color: #fff;
+  background-color: #000000;
 }
 h1{
   font-size: 90px;
@@ -66,26 +66,25 @@ a{
   font-size: 10px;
 }
 .btn {
-  padding: 0.85rem 2rem;
+  padding: 0.75rem 1.5rem;
   border-radius: 3px;
 }
 .btn-primary, .btn-primary:active {
-  background-color: #133996 !important;
-  border-color: #133996 !important;
-  color: #ffffff !important;
+  background-color: #133996 ;
+  border-color: #133996 ;
+  color: #ffffff ;
 }
 .btn-primary:hover{
-  background-color: #fc0320 !important;
-  border-color: #0000 !important;
+  background-color: #fc0320 ;
+  border-color: #0000 ;
   transition: 0.3s;
   box-shadow: 0 10px 55px 5px rgb(25 74 195 / 35%);
 }
 .btn-primary {
-  margin: 1.5rem 0.5rem !important;
+  margin: 1.5rem 0.5rem ;
 }
 .mbr-section-btn a.btn:not(.btn-form) {
   border-radius: 10px;
-
 }
 .media-container-row {
   display: -ms-flexbox;
@@ -110,8 +109,8 @@ a{
   border: none;
 }
 .mbr-section-title {
-    font-style: normal;
-    line-height: 1.2;
+  font-style: normal;
+  line-height: 1.2;
 }
 .mbr-figure {
     -ms-flex-item-align: center;
@@ -127,6 +126,160 @@ a{
     width: 100%;
 }
 
+#header-01 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+#header-01 .container-fluid{
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+#header-01 .title-content {
+  font-size: 5rem;
+  font-family: 'Nunito', sans-serif;
+  color: #ffe138;
+  padding: 3.5rem 4.5rem;
+}
+#header-01 .title-content-2 {
+  font-size: 4.5rem;
+  font-family: 'Nunito', sans-serif;
+  color: #ffffff;
+  padding: 3.5rem 4.5rem;
+  margin-top: 15rem;
+}
+#header-01 .btn{
+  color:#ffffff;
+  background: rgba(0, 124, 249, 0.2);
+  border-color: #ffffff;
+  font-family: 'Barlow', sans-serif;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-top: 10rem;
+}
+#header-01 .btn:hover{
+  background-color: #0069ba;
+}
+#hedaer-01 .home-section-btn a.btn:not(.btn-form) {
+  border-radius: 10px;
+}
+#header-01 .home-section-btn {
+  margin-left: -.25rem;
+  margin-right: -.25rem;
+  height: 100vh;
+}
+#header-01 .d1 {
+  position: absolute;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+
+  height: 30vh;
+  width: 25vw;
+
+  background-position: 0 50%;
+
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  animation: dd1 10s 1, dd12 10s 1;
+  animation-delay: 1s, 11s;
+  animation-iteration-count: infinite;
+}
+#header-01 .d2 {
+  position: absolute;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+
+  height: 90vh;
+  width: 25vw;
+
+  background-position: -10vw 50%;
+  left: 10vw;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  animation: dd2 10s 2;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+#header-01 .d3 {
+  position: absolute;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+  overflow: hidden;
+
+  height: 100vh;
+  width: 40vw;
+  left: 25vw;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
+  background-position: -35vw 50%;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 3;
+  animation: dd3 10s 2;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+
+}
+#header-01 .d4 {
+  position: absolute;
+  overflow: hidden;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+
+  height: 80vh;
+  width: 30vw;
+  left: 60vw;
+  background-position: -70vw 50%;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  animation: dd4 10s 2;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes dd1 {
+  0% {
+  }
+  50% {
+    width: 95vw;
+  }
+}
+@keyframes dd12 {
+  0% {
+  }
+  50% {
+    background-position: Calc(0vw - 40px) 50%;
+  }
+}
+@keyframes dd2 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-10vw - 40px) 50%;
+  }
+}
+@keyframes dd3 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-35vw - 40px) 50%;
+  }
+}
+@keyframes dd4 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-70vw - 40px) 50%;
+  }
+}
 
 
 #header-03{
@@ -285,6 +438,37 @@ a{
     height: auto;
     float: right;
   }
+  #header-01 .title-content{
+    font-size: 3.5rem;
+    padding: 6rem 3rem;
+  }
+  #header-01 .title-content-2{
+    font-size: 1.5rem;
+    visibility: hidden;
+    margin:-10rem;
+  }
+  #header-01 .btn{
+    color:#ffffff;
+    background: rgba(0, 124, 249, 0.2);
+    margin-top: 120rem;
+  }
+  #header-01 .d1 {
+    height: 30vh;
+    width: 55vw;
+  }
+  #header-01 .d2 {
+    height:  100vh;
+    width: 25vw;
+  }
+  #header-01  .d3{
+    height:  100vh;
+    width: 60vw;
+  }
+  #header-01 .d4 {
+    height:  100vh;
+    width: 30vw;
+  }
+
 }
 
 @media all and (max-width: 768px){
@@ -294,6 +478,38 @@ a{
   #header-03 .card{
     padding: 0.5rem 3.5rem !important;
   }
+  #header-01 .title-content{
+    font-size: 3rem;
+    padding: 4rem 3rem;
+  }
+  #header-01 .title-content-2{
+    visibility: hidden;
+    font-size: 6.5rem;
+    margin-top: 0rem;
+  }
+  #header-01 .d1 {
+    height: 30vh;
+    width: 55vw;
+  }
+  #header-01 .d2 {
+    height:  100vh;
+    width: 25vw;
+  }
+  #header-01  .d3{
+    height:  100vh;
+    width: 50vw;
+  }
+  #header-01 .d4 {
+    height:  100vh;
+    width: 30vw;
+  }
+  #header-01 .btn{
+    color:#ffffff;
+    background: rgba(0, 124, 249, 0.2);
+    margin-top: 20rem;
+    font-size: 15px;
+  }
+
 }
 
 
