Commit Message #files Modified #main.css

--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ a{
 }
 #header-01 .d1 {
   position: absolute;
-  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-image: url(images/bussit.jpg);
   background-size: 2700px 1500px;
 
   height: 30vh;
@@ -190,7 +190,7 @@ a{
 }
 #header-01 .d2 {
   position: absolute;
-  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-image: url(images/bussit.jpg);
   background-size: 2700px 1500px;
 
   height: 90vh;
@@ -208,7 +208,7 @@ a{
 }
 #header-01 .d3 {
   position: absolute;
-  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-image: url(images/bussit.jpg);
   background-size: 2700px 1500px;
   overflow: hidden;
 
@@ -229,7 +229,7 @@ a{
 #header-01 .d4 {
   position: absolute;
   overflow: hidden;
-  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-image: url(images/bussit.jpg);
   background-size: 2700px 1500px;
 
   height: 80vh;
