--- a/css/main.css
+++ b/css/main.css
@@ -173,8 +173,8 @@ a{
 }
 #header-01 .d1 {
   position: absolute;
-  background-image: url(bussit.jpg);
-  background-size: 2700px 1500px;
+  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-size: 2694px 1920px;
 
   height: 30vh;
   width: 25vw;
@@ -191,8 +191,8 @@ a{
 }
 #header-01 .d2 {
   position: absolute;
-  background-image: url(bussit.jpg);
-  background-size: 2700px 1500px;
+  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-size: 2694px 1920px;
 
   height: 90vh;
   width: 25vw;
@@ -209,8 +209,8 @@ a{
 }
 #header-01 .d3 {
   position: absolute;
-  background-image: url(bussit.jpg);
-  background-size: 2700px 1500px;
+  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-size: 2694px 1920px;
   overflow: hidden;
 
   height: 100vh;
@@ -230,8 +230,8 @@ a{
 #header-01 .d4 {
   position: absolute;
   overflow: hidden;
-  background-image: url(bussit.jpg);
-  background-size: 2700px 1500px;
+  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-size: 2694px 1920px;
 
   height: 80vh;
   width: 30vw;
@@ -246,6 +246,8 @@ a{
   animation-iteration-count: infinite;
 }
 
+
+
 @keyframes dd1 {
   0% {
   }
@@ -257,28 +259,28 @@ a{
   0% {
   }
   50% {
-    background-position: Calc(0vw - 140px) 50%;
+    background-position: Calc(0vw - 330px) 50%;
   }
 }
 @keyframes dd2 {
   0% {
   }
   50% {
-    background-position: Calc(-10vw - 140px) 50%;
+    background-position: Calc(-10vw - 330px) 50%;
   }
 }
 @keyframes dd3 {
   0% {
   }
   50% {
-    background-position: Calc(-35vw - 140px) 50%;
+    background-position: Calc(-35vw - 330px) 50%;
   }
 }
 @keyframes dd4 {
   0% {
   }
   50% {
-    background-position: Calc(-70vw - 140px) 50%;
+    background-position: Calc(-70vw - 330px) 50%;
   }
 }
 
@@ -451,28 +453,32 @@ a{
   #header-01 .btn{
     color:#ffffff;
     background: rgba(0, 124, 249, 0.2);
-    margin-top: 120rem;
+    margin-top: 35rem;
   }
   #header-01 .d1 {
     height: 30vh;
     width: 55vw;
+    background-size: 673px 960px;
   }
   #header-01 .d2 {
-    height:  100vh;
+    height: 70vh;
     width: 25vw;
+    background-size: 673px 960px;
   }
   #header-01  .d3{
-    height:  100vh;
+    height: 70vh;
     width: 60vw;
+    background-size: 673px 960px;
   }
   #header-01 .d4 {
-    height:  100vh;
+    height: 70vh;
     width: 30vw;
+    background-size: 673px 960px;
   }
 
 }
 
-@media all and (max-width: 768px){
+@media (min-width: 578px) and (max-width: 768px){
   .display-2{
     font-size: 1.15rem;
   }
