--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ a{
 }
 #header-01 .d1 {
   position: absolute;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
   background-size: 2694px 1920px;
 
   height: 30vh;
@@ -191,7 +191,7 @@ a{
 }
 #header-01 .d2 {
   position: absolute;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
   background-size: 2694px 1920px;
 
   height: 90vh;
@@ -209,7 +209,7 @@ a{
 }
 #header-01 .d3 {
   position: absolute;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
   background-size: 2694px 1920px;
   overflow: hidden;
 
@@ -230,7 +230,7 @@ a{
 #header-01 .d4 {
   position: absolute;
   overflow: hidden;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/bussit.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
   background-size: 2694px 1920px;
 
   height: 80vh;
