--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html{
   scroll-behavior: smooth;
-  overflow-x: hidden;
-
+	line-height: 1.5rem;
+	overflow-x: hidden;
 }
 body{
   overflow-x: hidden;
@@ -10,25 +10,33 @@ body{
   background-color: #000000;
 }
 h1{
+  font-family: 'Montserrat',sans-serif;
   font-size: 90px;
 }
-h2{
-  font-size: 40px;
+h2 {
+  font-family: 'Montserrat',sans-serif;
+  font-weight: bold;
+  font-size: 35px;
+  text-align: center;
 }
-h3{
-  font-size:20px;
-  font-weight: 300;
+h4 {
+  font-family: 'Montserrat',sans-serif;
+  font-weight: bold;
+  font-size: 50px;
 }
-h4{
-  font-size: 5px;
-
+h3 {
+  font-family: 'Montserrat',sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
 }
 p{
-  font-size: 30px;
   line-height: 1.7rem;
+  margin-top: 0rem;
 }
 a{
 }
+
 .row{
   flex-wrap: wrap;
   display: -webkit-flex;
@@ -57,7 +65,6 @@ a{
 .display-7{
   font-size: 1.2925rem;
 }
-
 
 
 .mbr-section-btn {
@@ -127,8 +134,8 @@ a{
 }
 
 #header-01 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 40px;
+  padding-bottom: 200px;
 }
 #header-01 .container-fluid{
   height: 100vh;
@@ -138,16 +145,20 @@ a{
   padding: 0;
 }
 #header-01 .title-content {
-  font-size: 5rem;
-  font-family: 'Nunito', sans-serif;
+  font-size: 3rem;
+  font-family: 'Lato', sans-serif;
   color: #000000;
-  padding: 3.5rem 4.5rem;
+  font-weight: 900;
+  padding: 2.5rem 2.5rem;
+}
+#header-01 .title-content span{
+  color: #fff673 ;
 }
 #header-01 .title-content-2 {
-  font-size: 4.5rem;
+  font-size: 3rem;
   font-family: 'Nunito', sans-serif;
   color: #000000;
-  padding: 3.5rem 4.5rem;
+  padding: 4.5rem 4.5rem;
   margin-top: 15rem;
 }
 #header-01 .btn{
@@ -174,12 +185,12 @@ a{
 #header-01 .d1 {
   position: absolute;
   background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
-  background-size: 2694px 1920px;
+  background-size: 1747px 1060px;
 
   height: 30vh;
   width: 25vw;
 
-  background-position: 0 50%;
+  background-position: 0vw 50%;
 
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
   top: 50%;
@@ -192,7 +203,7 @@ a{
 #header-01 .d2 {
   position: absolute;
   background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
-  background-size: 2694px 1920px;
+  background-size: 1747px 1060px;
 
   height: 90vh;
   width: 25vw;
@@ -210,10 +221,10 @@ a{
 #header-01 .d3 {
   position: absolute;
   background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
-  background-size: 2694px 1920px;
+  background-size: 1747px 1060px;
   overflow: hidden;
 
-  height: 100vh;
+  height: 110vh;
   width: 40vw;
   left: 25vw;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
@@ -231,9 +242,9 @@ a{
   position: absolute;
   overflow: hidden;
   background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
-  background-size: 2694px 1920px;
+  background-size: 1747px 1060px;
 
-  height: 80vh;
+  height: 90vh;
   width: 30vw;
   left: 60vw;
   background-position: -70vw 50%;
@@ -247,40 +258,39 @@ a{
 }
 
 
-
 @keyframes dd1 {
   0% {
   }
   50% {
-    width: 95vw;
+    width: 90vw;
   }
 }
 @keyframes dd12 {
   0% {
   }
   50% {
-    background-position: Calc(0vw - 330px) 50%;
+    background-position: Calc(0vw - 100px) 50%;
   }
 }
 @keyframes dd2 {
   0% {
   }
   50% {
-    background-position: Calc(-10vw - 330px) 50%;
+    background-position: Calc(-10vw - 100px) 50%;
   }
 }
 @keyframes dd3 {
   0% {
   }
   50% {
-    background-position: Calc(-35vw - 330px) 50%;
+    background-position: Calc(-35vw - 100px) 50%;
   }
 }
 @keyframes dd4 {
   0% {
   }
   50% {
-    background-position: Calc(-70vw - 330px) 50%;
+    background-position: Calc(-70vw - 100px) 50%;
   }
 }
 
@@ -347,8 +357,6 @@ a{
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
-
-
 
 #header-07{
   padding-top: 70px;
@@ -458,22 +466,22 @@ a{
   #header-01 .d1 {
     height: 30vh;
     width: 55vw;
-    background-size: 673px 960px;
+    background-size: 773px 660px;
   }
   #header-01 .d2 {
-    height: 70vh;
+    height: 80vh;
     width: 25vw;
-    background-size: 673px 960px;
+    background-size: 773px 660px;
   }
-  #header-01  .d3{
-    height: 70vh;
+  #header-01 .d3{
+    height: 100vh;
     width: 60vw;
-    background-size: 673px 960px;
+    background-size: 773px 660px;
   }
   #header-01 .d4 {
-    height: 70vh;
+    height: 80vh;
     width: 30vw;
-    background-size: 673px 960px;
+    background-size: 773px 660px;
   }
 
 }
@@ -519,8 +527,180 @@ a{
 
 }
 
+@media all and (min-width: 800px) {
+    .navbar .nav-item .dropdown-menu {
+      display: block;
+      opacity: 0;
+      visibility: hidden;
+      transition: .3s;
+      margin-top: 0;
+    }
+    .navbar .nav-item:hover .nav-link {
+      color: #000;
+    }
+    .navbar .dropdown-menu.fade-down {
+      top: 80%;
+      transform: rotateX(-75deg);
+      transform-origin: 0% 0%;
+    }
+    .navbar .dropdown-menu.fade-up {
+      top: 180%;
+    }
+    .navbar .nav-item:hover .dropdown-menu {
+      transition: .3s;
+      opacity: 1;
+      visibility: visible;
+      top: 100%;
+      transform: rotateX(0deg);
+    }
+  }
 
 
+/* navbar */
+.nav-item {
+  font-family: 'Lato', sans-serif;
+}
+.navbar-collapse ul li a {
+  font-weight: bold;
+  color: #000;
+  font-size: 0.9rem;
+}
+.dropdown-item {
+  color: #000;
+  font-family: 'Montserrat', sans-serif;
+}
+.dropdown-item:hover {
+  background-color: #5eaaa8;
+}
+.sign{
+  margin: 2px;
+}
+#cart_link{
+  background: #cffffe;border:1px solid;border-radius:10px;
+}
+#cart_link:hover{
+  background: #b2ebf2;
+}
+
+/* progress bar */
+.progress-container {
+  width: 100%;
+  height: 4px;
+  background: #fff;
+ position:absolute;
+  left:0;
+  bottom:0;
+  z-index: 1030;
+ -webkit-transform:transform3d(0,0,0);
+  -webkit-overflow-scrolling: touch;
+
+}
+.progress-bar {
+  height: 4px;
+  background: #ff0000;
+  width: 0%;
+}
+.box-1 {
+  display: flex;
+  justify-content: center;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+.box-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.box-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card-deck .row {
+  margin: auto;
+}
+.card {
+  background-color: #fff;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+ .social-media {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-left: auto;
+   margin-right: auto;
+   padding: 20px;
+ }
+ .social-media .button {
+   display: inline-block;
+   height: 60px;
+   width: 60px;
+   float: left;
+   margin: 0 5px;
+   overflow: hidden;
+   background: #cccccc;
+   border-radius: 40px;
+   cursor: pointer;
+   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+   transition: all 0.3s ease-out;
+ }
+ .social-media .button .icon {
+   display: block;
+   height: 60px;
+   width: 60px;
+   text-align: center;
+   border-radius: 50px;
+   box-sizing: border-box;
+   line-height: 60px;
+   transition: all 0.3s ease-out;
+ }
+ .social-media .button:nth-child(1):hover .icon {
+   background: #4267B2;
+ }
+ .social-media .button:nth-child(2):hover .icon {
+   background: #1DA1F2;
+ }
+ .social-media .button:nth-child(3):hover .icon {
+   background: #1DA1F2;
+ }
+ .social-media .button:nth-child(4):hover .icon {
+   background: #ff0000;
+ }
+ .social-media .button .icon i {
+   font-size: 25px;
+   line-height: 60px;
+   transition: all 0.3s ease-out;
+ }
+ .social-media .button:hover .icon i {
+   color: #fff;
+ }
+ .noty_theme__mint{
+   border-radius: 50px!important;
+   padding-left: 8px!important;
+ }
+
+ #end {
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+ 	  background-color: #f8f8f8;
+    box-sizing: border-box;
+  }
+ #end .foo {
+ 	border-top: 1px;
+ 	text-align: center;
+ }
+ #end .foo .foo-box img {
+ 	height: 40px;
+ }
+ #end h4, p{
+  color: #170000;
+ }
 *,*:before,*:after {
   box-sizing: border-box;
 }
