Commit Message #files modified #main.css

--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,7 @@ a{
 }
 #header-03 .nav-tabs .nav-item .btn{
   color: #fff !important;
+  font-weight: 600;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   background-color: transparent !important;
@@ -334,7 +335,7 @@ a{
 }
 #header-03 .nav-tabs .nav-item .btn:hover{
   cursor: pointer;
-  color: #fc643f !important;
+  color: #000000 !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
@@ -654,6 +655,84 @@ a{
         transform: translateX(0);
       }
     }
+
+@media (max-width: 767px) {
+  #header-03 .nav-tabs .nav-item .btn.active {
+    background-color: #fc643f !important;
+  }
+  #header-03 .nav-tabs .nav-item .btn {
+    border-color: #fc643f !important;
+  }
+}
+
+@media (min-width: 768px) {
+
+  #header-03 .nav-tabs .nav-item .btn {
+    margin: 0px !important;
+    border-color: transparent !important;
+  }
+  #header-03 .nav-tabs .nav-item .btn:after {
+    content: "";
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    margin: 0;
+    opacity: 1;
+    padding: 0;
+    background-color: transparent !important;
+    border: inherit;
+    border-color: #ff8a73;
+    border-radius: inherit;
+    -webkit-animation: none;
+    animation: none;
+    z-index: -1;
+  }
+  #header-03 .nav-tabs .nav-item .btn:before {
+    content: "";
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    background-color: transparent;
+    border-radius: inherit;
+    z-index: -1;
+    -webkit-transition: background-color 0.2s, -webkit-transform 0.3s;
+    transition: transform 0.3s, background-color 0.2s, -webkit-transform 0.3s;
+  }
+  #header-03 .nav-tabs .nav-item .btn.active:before {
+    background-color: #fc643f !important;
+  }
+
+  #header-03 .nav-tabs .nav-item:first-child > .btn:after {
+      border-right: none !important;
+      border-top-right-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
+    }
+  #header-03 .nav-tabs .nav-item:last-child > .btn:after {
+      border-left: none !important;
+      border-top-left-radius: 0 !important;
+      border-bottom-left-radius: 0 !important;
+    }
+  #header-03 .nav-tabs .nav-item:first-child > .btn:before {
+      -webkit-transform: translateX(50%);
+      transform: translateX(50%);
+    }
+  #header-03 .nav-tabs .nav-item:last-child > .btn:before {
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
+    }
+  #header-03 .nav-tabs .nav-item:first-child > .btn.active:before {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+  #header-03 .nav-tabs .nav-item:last-child > .btn.active:before {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+  }
 
 /* navbar */
 .nav-item {
