--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ a{
 }
 #header-01 .d1 {
   position: absolute;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/41.svg);
   background-size: 1747px 1060px;
 
   height: 30vh;
@@ -203,7 +203,7 @@ a{
 }
 #header-01 .d2 {
   position: absolute;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/41.svg);
   background-size: 1747px 1060px;
 
   height: 90vh;
@@ -221,7 +221,7 @@ a{
 }
 #header-01 .d3 {
   position: absolute;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/41.svg);
   background-size: 1747px 1060px;
   overflow: hidden;
 
@@ -242,7 +242,7 @@ a{
 #header-01 .d4 {
   position: absolute;
   overflow: hidden;
-  background-image: url(https://ben-14.github.io/Homepage-part-1/home.jpg);
+  background-image: url(https://ben-14.github.io/Homepage-part-1/41.svg);
   background-size: 1747px 1060px;
 
   height: 90vh;
