--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,12 @@ a{
   margin: 0;
   padding: 0;
 }
+#header-01 .title{
+  top: 35%;
+  height: 50vh;
+  z-index: 13;
+  padding: 2.5rem 0.5rem;
+}
 #header-01 .title-content {
   font-size: 3rem;
   font-family: 'Lato', sans-serif;
@@ -153,35 +159,49 @@ a{
   padding: 2.5rem 2.5rem;
 }
 #header-01 .title-content span{
-  color: #fff673 ;
+  color: #fff56b ;
 }
 #header-01 .title-content-2 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-family: 'Nunito', sans-serif;
   color: #000000;
-  padding: 4.5rem 4.5rem;
-  margin-top: 15rem;
+  padding: 1.5rem 2.5rem;
+  margin-top: 0rem;
+}
+#header-01 .title-content-2 span{
+  font-size: 9.5rem;
+  color: #c40000;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
 }
 #header-01 .btn{
   color: #ffffff;
-  background: rgba(0, 124, 249, 0.4);
-  border-color: #000000;
+  background-color: #0069ba;
+  border-color: #ffffff ;
   font-family: 'Barlow', sans-serif;
   border-top-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  margin-top: 10rem;
 }
 #header-01 .btn:hover{
-  background-color: #0069ba;
-  border-color: #ffffff ;
-}
-#hedaer-01 .home-section-btn a.btn:not(.btn-form) {
-  border-radius: 10px;
+
+  background: rgba(0, 124, 249, 0.4);
+  border-color: #000000;
 }
 #header-01 .home-section-btn {
   margin-left: -.25rem;
   margin-right: -.25rem;
-  height: 100vh;
+}
+#header-01 .img-card {
+  padding: 2.5rem 2.5rem;
+}
+#header-01 .img-card .img-icons{
+  width: 100%;
+  padding-left: 1rem;
+}
+#header-01 .img-card .img-icons img{
+  height: 35%;
+  width: 35%;
+  float: right;
 }
 #header-01 .d1 {
   position: absolute;
@@ -191,7 +211,7 @@ a{
   height: 30vh;
   width: 25vw;
 
-  background-position: 0vw 50%;
+  background-position: -10vw 50%;
 
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
   top: 50%;
@@ -209,7 +229,7 @@ a{
   height: 90vh;
   width: 25vw;
 
-  background-position: -10vw 50%;
+  background-position: -20vw 50%;
   left: 10vw;
 
   top: 50%;
@@ -229,7 +249,7 @@ a{
   width: 40vw;
   left: 25vw;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
-  background-position: -35vw 50%;
+  background-position: -45vw 50%;
 
   top: 50%;
   transform: translateY(-50%);
@@ -248,7 +268,7 @@ a{
   height: 90vh;
   width: 30vw;
   left: 60vw;
-  background-position: -70vw 50%;
+  background-position: -80vw 50%;
 
   top: 50%;
   transform: translateY(-50%);
@@ -263,7 +283,7 @@ a{
   0% {
   }
   50% {
-    width: 90vw;
+    width: 35vw;
   }
 }
 @keyframes dd12 {
