--- a/css/main.css
+++ b/css/main.css
@@ -133,10 +133,9 @@ a{
     display: block;
     width: 100%;
 }
-
 #header-01 {
-  padding-top: 40px;
-  padding-bottom: 200px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 #header-01 .container-fluid{
   height: 100vh;
@@ -146,10 +145,11 @@ a{
   padding: 0;
 }
 #header-01 .title{
-  top: 35%;
+  top: 20%;
   height: 50vh;
+  font-family: 'Montserrat', sans-serif;
   z-index: 13;
-  padding: 2.5rem 0.5rem;
+  padding: 0.5rem 0.5rem;
 }
 #header-01 .title-content {
   font-size: 3rem;
@@ -159,20 +159,18 @@ a{
   padding: 2.5rem 2.5rem;
 }
 #header-01 .title-content span{
-  color: #fff56b ;
+
 }
 #header-01 .title-content-2 {
-  font-size: 3.5rem;
-  font-family: 'Nunito', sans-serif;
+  font-size: 3rem;
   color: #000000;
+  font-weight: 700;
   padding: 1.5rem 2.5rem;
   margin-top: 0rem;
 }
 #header-01 .title-content-2 span{
-  font-size: 9.5rem;
+  font-size: 6.5rem;
   color: #c40000;
-  font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
 }
 #header-01 .btn{
   color: #ffffff;
@@ -183,7 +181,6 @@ a{
   border-bottom-right-radius: 10px;
 }
 #header-01 .btn:hover{
-
   background: rgba(0, 124, 249, 0.4);
   border-color: #000000;
 }
@@ -191,6 +188,7 @@ a{
   margin-left: -.25rem;
   margin-right: -.25rem;
 }
+
 #header-01 .img-card {
   padding: 2.5rem 2.5rem;
 }
@@ -210,6 +208,7 @@ a{
 
   height: 30vh;
   width: 25vw;
+  opacity: 0.85;
 
   background-position: -15vw 50%;
 
@@ -228,6 +227,7 @@ a{
 
   height: 90vh;
   width: 25vw;
+  opacity: 0.85;
 
   background-position: -25vw 50%;
   left: 10vw;
@@ -247,6 +247,7 @@ a{
 
   height: 110vh;
   width: 40vw;
+  opacity: 0.85;
   left: 25vw;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
   background-position: -50vw 50%;
@@ -267,6 +268,7 @@ a{
 
   height: 90vh;
   width: 30vw;
+  opacity: 0.85;
   left: 60vw;
   background-position: -85vw 50%;
 
